forge/tests/error/bad_option_name.frg
#lang forge 
option NOT_A_REAL_OPTION 0